Slight re-structure adding a preface section to cover the Operators Specific for OCPv/Baremetal)

--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -1,37 +1,43 @@
 * xref:index.adoc[Introduction]
 * xref:00_introductions.adoc[Agenda & Instructors]
 
-* xref:module-00.adoc[1. Virtual Machine Management ]
-** xref:module-00.adoc#create_project[Create a New Project]
-** xref:module-00.adoc#create_vm[Create a Linux Virtual Machine]
-** xref:module-00.adoc#admin_vms[Administering Virtual Machines]
-** xref:module-00.adoc#vm_state[Controlling Virtual Machine State]
-** xref:module-00.adoc#live_migrate[Live Migrate a Virtual Machine]
+* xref:module-00.adoc[0. Operators]
+** xref:module-00.adoc#storage_operator[Openshift Storage]
+** xref:module-00.adoc#virtualization_operator[Openshift Virtualization]
+** xref:module-00.adoc#nmstate_operator[NMState]
+** xref:module-00.adoc#mtv_operator[Migration Toolkit for Virtualization]
 
-* xref:module-01.adoc[2. Bare Metal Management ]
-** xref:module-01.adoc#review_nodes[Review Nodes and Machines]
-** xref:module-01.adoc#review_hosts[Review Bare Metal Hosts]
-** xref:module-01.adoc#scaling_cluster[Scaling the Cluster with a New Bare Metal Host]
+* xref:module-01.adoc[1. Virtual Machine Management ]
+** xref:module-01.adoc#create_project[Create a New Project]
+** xref:module-01.adoc#create_vm[Create a Linux Virtual Machine]
+** xref:module-01.adoc#admin_vms[Administering Virtual Machines]
+** xref:module-01.adoc#vm_state[Controlling Virtual Machine State]
+** xref:module-01.adoc#live_migrate[Live Migrate a Virtual Machine]
 
-* xref:module-02.adoc[3. Storage Management]
-** xref:module-02.adoc#examine_pvc[Examine the PVC for a VM]
-** xref:module-02.adoc#managing_snapshots[Managing Snapshots]
-** xref:module-02.adoc#clone_vm[Clone a Virtual Machine]
+* xref:module-02.adoc[2. Bare Metal Management ]
+** xref:module-02.adoc#review_nodes[Review Nodes and Machines]
+** xref:module-02.adoc#review_hosts[Review Bare Metal Hosts]
+** xref:module-02.adoc#scaling_cluster[Scaling the Cluster with a New Bare Metal Host]
 
-* xref:module-03.adoc[4. Network Management]
-** xref:module-03.adoc#create_netattach[Create a Network Attachment Definition]
-** xref:module-03.adoc#connect_external_net[Connect a Virtual Machine to an External Network]
-** xref:module-03.adoc#multinetwork_policy[Using a Multinetwork Policy]
+* xref:module-03.adoc[3. Storage Management]
+** xref:module-03.adoc#examine_pvc[Examine the PVC for a VM]
+** xref:module-03.adoc#managing_snapshots[Managing Snapshots]
+** xref:module-03.adoc#clone_vm[Clone a Virtual Machine]
 
-* xref:module-04.adoc[5. Template Management]
-** xref:module-04.adoc#clone_customize_template[Clone and Customize a Template]
-** xref:module-04.adoc#create_win[Create a Windows VM Template]
+* xref:module-04.adoc[4. Network Management]
+** xref:module-04.adoc#create_netattach[Create a Network Attachment Definition]
+** xref:module-04.adoc#connect_external_net[Connect a Virtual Machine to an External Network]
+** xref:module-04.adoc#multinetwork_policy[Using a Multinetwork Policy]
 
-* xref:module-05.adoc[6. Migrating Virtual Machines]
-** xref:module-05.adoc#prerequisites[Prerequisites for Migrations]
-** xref:module-05.adoc#migrating_vms[Migrating Virtual Machines from VMware]
+* xref:module-05.adoc[5. Template Management]
+** xref:module-05.adoc#clone_customize_template[Clone and Customize a Template]
+** xref:module-05.adoc#create_win[Create a Windows VM Template]
 
-* xref:module-06.adoc[7. Troubleshooting]
+* xref:module-06.adoc[6. Migrating Virtual Machines]
+** xref:module-06.adoc#prerequisites[Prerequisites for Migrations]
+** xref:module-06.adoc#migrating_vms[Migrating Virtual Machines from VMware]
+
+* xref:module-07.adoc[7. Troubleshooting]
 
 * Additional Boot Camp Content
 ** xref:22_disconnected.adoc[Disconnected Environments]
